--- a/Boston Housing Data Model.ipynb
+++ b/Boston Housing Data Model.ipynb
@@ -606,64 +606,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.3991439604870375"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  3.3991439604870375\n"
+     ]
     }
    ],
    "source": [
     "#getting performance metrics for the model\n",
     "\n",
-    "metrics.mean_absolute_error(y_test,predictions)"
+    "print('MAE: ', metrics.mean_absolute_error(y_test,predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "19.509868827552722"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  19.509868827552722\n"
+     ]
     }
    ],
    "source": [
-    "metrics.mean_squared_error(y_test,predictions)"
+    "print('MAE: ', metrics.mean_squared_error(y_test,predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.416997716498472"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  4.416997716498472\n"
+     ]
     }
    ],
    "source": [
-    "np.sqrt(metrics.mean_squared_error(y_test,predictions))"
+    "print('MAE: ', np.sqrt(metrics.mean_squared_error(y_test,predictions)))"
    ]
   }
  ],
